qt/gen_qfiledialog.h

typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QUrl QUrl;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QUrl* QFileDialog_getOpenFileUrl2(QWidget* parent, struct miqt_string caption);
QUrl* QFileDialog_getOpenFileUrl3(QWidget* parent, struct miqt_string caption, QUrl* dir);
QUrl* QFileDialog_getOpenFileUrl4(QWidget* parent, struct miqt_string caption, QUrl* dir, struct miqt_string filter);
struct miqt_string QFileDialog_getSaveFileName1(QWidget* parent);
struct miqt_string QFileDialog_getSaveFileName2(QWidget* parent, struct miqt_string caption);
struct miqt_string QFileDialog_getSaveFileName3(QWidget* parent, struct miqt_string caption, struct miqt_string dir);
struct miqt_string QFileDialog_getSaveFileName4(QWidget* parent, struct miqt_string caption, struct miqt_string dir, struct miqt_string filter);
QUrl* QFileDialog_getSaveFileUrl1(QWidget* parent);
QUrl* QFileDialog_getSaveFileUrl2(QWidget* parent, struct miqt_string caption);
QUrl* QFileDialog_getSaveFileUrl3(QWidget* parent, struct miqt_string caption, QUrl* dir);
QUrl* QFileDialog_getSaveFileUrl4(QWidget* parent, struct miqt_string caption, QUrl* dir, struct miqt_string filter);
struct miqt_string QFileDialog_getExistingDirectory1(QWidget* parent);
struct miqt_string QFileDialog_getExistingDirectory2(QWidget* parent, struct miqt_string caption);
struct miqt_string QFileDialog_getExistingDirectory3(QWidget* parent, struct miqt_string caption, struct miqt_string dir);
struct miqt_string QFileDialog_getExistingDirectory4(QWidget* parent, struct miqt_string caption, struct miqt_string dir, int options);
QUrl* QFileDialog_getExistingDirectoryUrl1(QWidget* parent);
QUrl* QFileDialog_getExistingDirectoryUrl2(QWidget* parent, struct miqt_string caption);
QUrl* QFileDialog_getExistingDirectoryUrl3(QWidget* parent, struct miqt_string caption, QUrl* dir);
QUrl* QFileDialog_getExistingDirectoryUrl4(QWidget* parent, struct miqt_string caption, QUrl* dir, int options);
QUrl* QFileDialog_getExistingDirectoryUrl5(QWidget* parent, struct miqt_string caption, QUrl* dir, int options, struct miqt_array /* of struct miqt_string */  supportedSchemes);
struct miqt_array /* of struct miqt_string */  QFileDialog_getOpenFileNames1(QWidget* parent);
struct miqt_array /* of struct miqt_string */  QFileDialog_getOpenFileNames2(QWidget* parent, struct miqt_string caption);
struct miqt_array /* of struct miqt_string */  QFileDialog_getOpenFileNames3(QWidget* parent, struct miqt_string caption, struct miqt_string dir);
struct miqt_array /* of struct miqt_string */  QFileDialog_getOpenFileNames4(QWidget* parent, struct miqt_string caption, struct miqt_string dir, struct miqt_string filter);
struct miqt_array /* of QUrl* */  QFileDialog_getOpenFileUrls1(QWidget* parent);
struct miqt_array /* of QUrl* */  QFileDialog_getOpenFileUrls2(QWidget* parent, struct miqt_string caption);
struct miqt_array /* of QUrl* */  QFileDialog_getOpenFileUrls3(QWidget* parent, struct miqt_string caption, QUrl* dir);
struct miqt_array /* of QUrl* */  QFileDialog_getOpenFileUrls4(QWidget* parent, struct miqt_string caption, QUrl* dir, struct miqt_string filter);
bool QFileDialog_override_virtual_metacall(void* self, intptr_t slot);
int QFileDialog_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QFileDialog_override_virtual_setVisible(void* self, intptr_t slot);
void QFileDialog_virtualbase_setVisible(void* self, bool visible);
bool QFileDialog_override_virtual_done(void* self, intptr_t slot);
void QFileDialog_virtualbase_done(void* self, int result);
bool QFileDialog_override_virtual_accept(void* self, intptr_t slot);
void QFileDialog_virtualbase_accept(void* self);
bool QFileDialog_override_virtual_changeEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_changeEvent(void* self, QEvent* e);
bool QFileDialog_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QFileDialog_virtualbase_sizeHint(const void* self);
bool QFileDialog_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QFileDialog_virtualbase_minimumSizeHint(const void* self);
bool QFileDialog_override_virtual_open(void* self, intptr_t slot);
void QFileDialog_virtualbase_open(void* self);
bool QFileDialog_override_virtual_exec(void* self, intptr_t slot);
int QFileDialog_virtualbase_exec(void* self);
bool QFileDialog_override_virtual_reject(void* self, intptr_t slot);
void QFileDialog_virtualbase_reject(void* self);
bool QFileDialog_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QFileDialog_override_virtual_closeEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_closeEvent(void* self, QCloseEvent* param1);
bool QFileDialog_override_virtual_showEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QFileDialog_override_virtual_resizeEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QFileDialog_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QFileDialog_override_virtual_eventFilter(void* self, intptr_t slot);
bool QFileDialog_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QFileDialog_override_virtual_devType(void* self, intptr_t slot);
int QFileDialog_virtualbase_devType(const void* self);
bool QFileDialog_override_virtual_heightForWidth(void* self, intptr_t slot);
int QFileDialog_virtualbase_heightForWidth(const void* self, int param1);
bool QFileDialog_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QFileDialog_virtualbase_hasHeightForWidth(const void* self);
bool QFileDialog_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QFileDialog_virtualbase_paintEngine(const void* self);
bool QFileDialog_override_virtual_event(void* self, intptr_t slot);
bool QFileDialog_virtualbase_event(void* self, QEvent* event);
bool QFileDialog_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QFileDialog_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QFileDialog_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QFileDialog_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QFileDialog_override_virtual_wheelEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QFileDialog_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QFileDialog_override_virtual_focusInEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QFileDialog_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
void QFileDialog_virtualbase_enterEvent(void* self, QEvent* event);